Wed Mar 12 14:53:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: handle SQL_TIMESTAMP like SQL_TYPE_TIMESTAMP

Wed Mar 12 14:34:21 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix auto-commit set
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	- make possible to override connection attributes
	* src/odbc/unittests/transaction2.c:
	- improve

Tue Mar 11 09:42:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix auto-commit off before connection

Tue Mar 11 09:36:11 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/encodings.pl: fix a problem with cvs and branches

Fri Mar 07 16:40:16 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/transaction2.c: improved

Fri Mar 07 11:57:00 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/transaction2.c(added):
	- transaction level support

Fri Mar 07 09:55:57 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: updated

Wed Mar 05 12:0:43 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/build_dsw.pl: change some build options

Fri Feb 29 11:50:06 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/rowset.c(added):
	- ported tests and SQL_ROWSET_SIZE fix

Thu Feb 28 18:24:31 EST 2008	JK Lowden <jklowden@freetds.org>
	* doc/htdoc/news.html announced 0.82RC2
	* vms/configure.com turn off iconv by default

Wed Feb 20 09:04:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: avoid duplicate case

Fri Feb 15 11:25:46 EST 2008	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/tds/convert.c
	- support SYBUNIQUE printable width

Fri Feb 15 12:05:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>