@@ -1,3 +1,6 @@
+Wed Mar 12 15:25:11 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/error.c: check proper handle type
+
 Wed Mar 12 14:53:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/odbc.c: handle SQL_TIMESTAMP like SQL_TYPE_TIMESTAMP
 
@@ -216,4 +219,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2502 2008/03/12 13:54:32 freddy77 Exp $
+$Id: ChangeLog,v 1.2503 2008/03/12 14:26:07 freddy77 Exp $
